--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,10 +4,9 @@
 .loader svg {
   width: 50px;
   height: 50px;
-  stroke: #387EF5;
-  fill: #387EF5;
+  stroke: #9082F5;
+  fill: #9082F5;
 }
-
 .loader-box {
   text-align: center;
   padding: 10% 0 10% 0
