--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,8 +4,8 @@
 .loader svg {
   width: 50px;
   height: 50px;
-  stroke: #9082F5;
-  fill: #9082F5;
+  stroke: #DD8998;
+  fill: #DD8998;
 }
 .loader-box {
   text-align: center;
