--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3703,7 +3703,7 @@ address {
   line-height: 1.42857; }
 
 a {
-  color: #9082f5; }
+  color: #dd8998; }
 
 a.subdued {
   padding-right: 10px;
@@ -3931,14 +3931,14 @@ a.subdued {
     .bar.bar-stable.bar-footer {
       background-image: linear-gradient(180deg, #b2b2b2, #b2b2b2 50%, transparent 50%); }
   .bar.bar-positive {
-    border-color: #6653f1;
-    background-color: #9082f5;
-    background-image: linear-gradient(0deg, #6653f1, #6653f1 50%, transparent 50%);
+    border-color: #d26175;
+    background-color: #dd8998;
+    background-image: linear-gradient(0deg, #d26175, #d26175 50%, transparent 50%);
     color: #fff; }
     .bar.bar-positive .title {
       color: #fff; }
     .bar.bar-positive.bar-footer {
-      background-image: linear-gradient(180deg, #6653f1, #6653f1 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #d26175, #d26175 50%, transparent 50%); }
   .bar.bar-calm {
     border-color: #0a9dc7;
     background-color: #11c1f3;
@@ -3965,7 +3965,7 @@ a.subdued {
     .bar.bar-balanced .title {
       color: #fff; }
     .bar.bar-balanced.bar-footer {
-      background-image: linear-gradient(180deg, #28a54c, #6653f1 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #28a54c, #d26175 50%, transparent 50%); }
   .bar.bar-energized {
     border-color: #e6b500;
     background-color: #ffc900;
@@ -4132,13 +4132,13 @@ a.subdued {
 
 .bar-positive .button {
   border-color: transparent;
-  background-color: #9082f5;
+  background-color: #dd8998;
   color: #fff; }
   .bar-positive .button:hover {
     color: #fff;
     text-decoration: none; }
   .bar-positive .button.active, .bar-positive .button.activated {
-    background-color: #6653f1; }
+    background-color: #d26175; }
   .bar-positive .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4386,14 +4386,14 @@ a.subdued {
 
 .tabs-positive > .tabs,
 .tabs.tabs-positive {
-  border-color: #6653f1;
-  background-color: #9082f5;
-  background-image: linear-gradient(0deg, #6653f1, #6653f1 50%, transparent 50%);
+  border-color: #d26175;
+  background-color: #dd8998;
+  background-image: linear-gradient(0deg, #d26175, #d26175 50%, transparent 50%);
   color: #fff; }
   .tabs-positive > .tabs .tab-item .badge,
   .tabs.tabs-positive .tab-item .badge {
     background-color: #fff;
-    color: #9082f5; }
+    color: #dd8998; }
 
 .tabs-calm > .tabs,
 .tabs.tabs-calm {
@@ -4514,7 +4514,7 @@ a.subdued {
   top: 4%; }
 
 .tabs-striped.tabs-positive .tabs {
-  background-color: #9082f5; }
+  background-color: #dd8998; }
 
 .tabs-striped.tabs-positive .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -4648,7 +4648,7 @@ a.subdued {
   background-image: none; }
 
 .tabs-striped.tabs-background-positive .tabs {
-  background-color: #9082f5;
+  background-color: #dd8998;
   background-image: none; }
 
 .tabs-striped.tabs-background-calm .tabs {
@@ -4704,14 +4704,14 @@ a.subdued {
       opacity: 1; }
 
 .tabs-striped.tabs-color-positive .tab-item {
-  color: rgba(144, 130, 245, 0.4);
+  color: rgba(221, 137, 152, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-positive .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-positive .tab-item.tab-item-active, .tabs-striped.tabs-color-positive .tab-item.active, .tabs-striped.tabs-color-positive .tab-item.activated {
     margin-top: -2px;
-    color: #9082f5;
-    border: 0 solid #9082f5;
+    color: #dd8998;
+    border: 0 solid #dd8998;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-positive .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-positive .tab-item.active .badge, .tabs-striped.tabs-color-positive .tab-item.activated .badge {
       top: 2px;
@@ -4815,9 +4815,9 @@ a.subdued {
 
 .tabs-background-positive .tabs,
 .tabs-background-positive > .tabs {
-  background-color: #9082f5;
-  background-image: linear-gradient(0deg, #6653f1, #6653f1 50%, transparent 50%);
-  border-color: #6653f1; }
+  background-color: #dd8998;
+  background-image: linear-gradient(0deg, #d26175, #d26175 50%, transparent 50%);
+  border-color: #d26175; }
 
 .tabs-background-calm .tabs,
 .tabs-background-calm > .tabs {
@@ -4878,13 +4878,13 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-positive .tab-item {
-  color: rgba(144, 130, 245, 0.4);
+  color: rgba(221, 137, 152, 0.4);
   opacity: 1; }
   .tabs-color-positive .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-positive .tab-item.tab-item-active, .tabs-color-positive .tab-item.active, .tabs-color-positive .tab-item.activated {
-    color: #9082f5;
-    border: 0 solid #9082f5; }
+    color: #dd8998;
+    border: 0 solid #dd8998; }
     .tabs-color-positive .tab-item.tab-item-active .badge, .tabs-color-positive .tab-item.active .badge, .tabs-color-positive .tab-item.activated .badge {
       opacity: 1; }
 
@@ -4967,7 +4967,7 @@ ion-tabs.tabs-color-active-stable .tab-item {
 ion-tabs.tabs-color-active-positive .tab-item {
   color: #444; }
   ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated {
-    color: #9082f5; }
+    color: #dd8998; }
 
 ion-tabs.tabs-color-active-calm .tab-item {
   color: #444; }
@@ -5155,7 +5155,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .tab-item.tab-item-active.tab-item-positive,
   .tab-item.active.tab-item-positive,
   .tab-item.activated.tab-item-positive {
-    color: #9082f5; }
+    color: #dd8998; }
   .tab-item.tab-item-active.tab-item-calm,
   .tab-item.active.tab-item-calm,
   .tab-item.activated.tab-item-calm {
@@ -5697,8 +5697,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
     background-color: #f8f8f8;
     color: #444; }
   .item.item-positive {
-    border-color: #6653f1;
-    background-color: #9082f5;
+    border-color: #d26175;
+    background-color: #dd8998;
     color: #fff; }
   .item.item-calm {
     border-color: #0a9dc7;
@@ -5785,16 +5785,16 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item-complex.activated .item-content.item-positive,
   .item .item-content.active.item-positive,
   .item .item-content.activated.item-positive {
-    border-color: #6653f1;
-    background-color: #6653f1; }
+    border-color: #d26175;
+    background-color: #d26175; }
     .item.active.item-positive.item-complex > .item-content,
     .item.activated.item-positive.item-complex > .item-content,
     .item-complex.active .item-content.item-positive.item-complex > .item-content,
     .item-complex.activated .item-content.item-positive.item-complex > .item-content,
     .item .item-content.active.item-positive.item-complex > .item-content,
     .item .item-content.activated.item-positive.item-complex > .item-content {
-      border-color: #6653f1;
-      background-color: #6653f1; }
+      border-color: #d26175;
+      background-color: #d26175; }
   .item.active.item-calm,
   .item.activated.item-calm,
   .item-complex.active .item-content.item-calm,
@@ -6000,15 +6000,15 @@ a.item-content {
       background-color: #e5e5e5; }
 
 .item-complex.item-positive > .item-content {
-  border-color: #6653f1;
-  background-color: #9082f5;
+  border-color: #d26175;
+  background-color: #dd8998;
   color: #fff; }
   .item-complex.item-positive > .item-content.active, .item-complex.item-positive > .item-content:active {
-    border-color: #6653f1;
-    background-color: #6653f1; }
+    border-color: #d26175;
+    background-color: #d26175; }
     .item-complex.item-positive > .item-content.active.item-complex > .item-content, .item-complex.item-positive > .item-content:active.item-complex > .item-content {
-      border-color: #6653f1;
-      background-color: #6653f1; }
+      border-color: #d26175;
+      background-color: #d26175; }
 
 .item-complex.item-calm > .item-content {
   border-color: #0a9dc7;
@@ -6674,7 +6674,7 @@ button.item.item-button-right {
 
 .tabs .tab-item .badge.badge-positive,
 .badge.badge-positive {
-  background-color: #9082f5;
+  background-color: #dd8998;
   color: #fff; }
 
 .tabs .tab-item .badge.badge-calm,
@@ -7388,8 +7388,8 @@ ion-slides {
     stroke: #f8f8f8;
     fill: #f8f8f8; }
   .spinner.spinner-positive {
-    stroke: #9082f5;
-    fill: #9082f5; }
+    stroke: #dd8998;
+    fill: #dd8998; }
   .spinner.spinner-calm {
     stroke: #11c1f3;
     fill: #11c1f3; }
@@ -7410,7 +7410,7 @@ ion-slides {
     fill: #444; }
 
 .spinner-android {
-  stroke: #4b8bf4; }
+  stroke: #DD8998; }
 
 .spinner-ios,
 .spinner-ios-small {
@@ -7430,7 +7430,7 @@ ion-slides {
   stop-color: #f8f8f8; }
 
 .spinner-spiral.spinner-positive .stop2 {
-  stop-color: #9082f5; }
+  stop-color: #dd8998; }
 
 .spinner-spiral.spinner-calm .stop2 {
   stop-color: #11c1f3; }
@@ -7791,8 +7791,8 @@ input[type="checkbox"][readonly] {
     border-color: #ddd; }
   .checkbox input:checked:before,
   .checkbox input:checked + .checkbox-icon:before {
-    background: #9082f5;
-    border-color: #9082f5; }
+    background: #dd8998;
+    border-color: #dd8998; }
 
 .checkbox-light input:before,
 .checkbox-light .checkbox-icon:before {
@@ -7814,12 +7814,12 @@ input[type="checkbox"][readonly] {
 
 .checkbox-positive input:before,
 .checkbox-positive .checkbox-icon:before {
-  border-color: #9082f5; }
+  border-color: #dd8998; }
 
 .checkbox-positive input:checked:before,
 .checkbox-positive input:checked + .checkbox-icon:before {
-  background: #9082f5;
-  border-color: #9082f5; }
+  background: #dd8998;
+  border-color: #dd8998; }
 
 .checkbox-calm input:before,
 .checkbox-calm .checkbox-icon:before {
@@ -8020,8 +8020,8 @@ input:checked + .checkbox-icon:after {
   background-color: #b2b2b2; }
 
 .toggle.toggle-positive input:checked + .track {
-  border-color: #9082f5;
-  background-color: #9082f5; }
+  border-color: #dd8998;
+  background-color: #dd8998; }
 
 .toggle.toggle-calm input:checked + .track {
   border-color: #11c1f3;
@@ -8158,10 +8158,10 @@ input:checked + .checkbox-icon:after {
   background-color: #b2b2b2; }
 
 .toggle-small .toggle-positive input:checked + .track {
-  background-color: rgba(144, 130, 245, 0.5); }
+  background-color: rgba(221, 137, 152, 0.5); }
 
 .toggle-small .toggle-positive input:checked + .track .handle {
-  background-color: #9082f5; }
+  background-color: #dd8998; }
 
 .toggle-small .toggle-calm input:checked + .track {
   background-color: rgba(17, 193, 243, 0.5); }
@@ -8333,9 +8333,9 @@ input:checked + .checkbox-icon:after {
   .range.range-stable input::-ms-fill-lower {
     background: #b2b2b2; }
   .range.range-positive input::-webkit-slider-thumb:before {
-    background: #9082f5; }
+    background: #dd8998; }
   .range.range-positive input::-ms-fill-lower {
-    background: #9082f5; }
+    background: #dd8998; }
   .range.range-calm input::-webkit-slider-thumb:before {
     background: #11c1f3; }
   .range.range-calm input::-ms-fill-lower {
@@ -8455,7 +8455,7 @@ input:checked + .checkbox-icon:after {
   .item-select.item-stable:after, .item-select.item-stable .input-label {
     color: #666666; }
   .item-select.item-positive select {
-    background: #9082f5;
+    background: #dd8998;
     color: #fff; }
   .item-select.item-positive:after, .item-select.item-positive .input-label {
     color: #fff; }
@@ -8610,27 +8610,27 @@ progress {
         color: #fff; }
   .button.button-positive {
     border-color: transparent;
-    background-color: #9082f5;
+    background-color: #dd8998;
     color: #fff; }
     .button.button-positive:hover {
       color: #fff;
       text-decoration: none; }
     .button.button-positive.active, .button.button-positive.activated {
-      background-color: #6653f1; }
+      background-color: #d26175; }
     .button.button-positive.button-clear {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #9082f5; }
+      color: #dd8998; }
     .button.button-positive.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-positive.button-outline {
-      border-color: #9082f5;
+      border-color: #dd8998;
       background: transparent;
-      color: #9082f5; }
+      color: #dd8998; }
       .button.button-positive.button-outline.active, .button.button-positive.button-outline.activated {
-        background-color: #9082f5;
+        background-color: #dd8998;
         box-shadow: none;
         color: #fff; }
   .button.button-calm {
@@ -9414,13 +9414,13 @@ a.button {
   border-color: #b2b2b2; }
 
 .positive, a.positive {
-  color: #9082f5; }
+  color: #dd8998; }
 
 .positive-bg {
-  background-color: #9082f5; }
+  background-color: #dd8998; }
 
 .positive-border {
-  border-color: #6653f1; }
+  border-color: #d26175; }
 
 .calm, a.calm {
   color: #11c1f3; }
